# image-segmentation-tracking-and-feature-computation

parameters/: 20140425ILZENKA_P_rom.tif  20140425ILZENKA_P_squ.tif  20140425ILZENKA_mixing_matrix.txt  segmentation_paramters.txt
src/c++/: CMakeLists.txt
src/c++/preprocessing/: CMakeLists.txt  background_subtraction.cpp  helpers.cpp  helpers.h  helpers_old.cpp  helpers_old.h  image_to_stack.cpp  preprocessor.cpp  preprocessor.h  processor_main.cpp  unmix16.cpp
src/c++/scatterPlot/: CMakeLists.txt  ScatterPlot.cpp
src/c++/segmentation/: CMakeLists.txt  main.cpp  seg_helpers.cpp  seg_helpers.h
src/c++/spectralclustering/: CMakeLists.txt  main.cpp  spectal_clustering.cpp  spectal_clustering.h
src/c++/wellcropping/: CMakeLists.txt  helper.h  wellDetection.cpp
src/matlab/: FeatureComputationPipeline_v01.m  SegmentationPipeline_v01.m
src/matlab/helpers/: MainMainFeatures.m  MainSegmTrack.m  MainSimpleFeature.m  h_CleanLabel.m  h_GetAssocFeat.m  h_GetDeathFeat.m  h_GetGeomFeats.m  h_GetTracks.m  h_SpectralClusteringSegmentation.m  h_read3DImage.m  h_save3DImage.m
src/python/: final_pipeline_params.py  final_pipeline_v01.py  final_pipeline_v02.py  helper.py
